<resources>
    <string name="app_name">BlueBacon</string>
    <string name="title_activity_main">BlueBacon</string>

    <string name="action_beacons">Beacon Radar</string>
    <string name="action_machines">Machine Radar</string>
    <string name="action_settings">Settings</string>
    <string name="action_weather">Weather</string>
    <string name="no_data">No data</string>

    <!-- radar_frag_item strings -->
    <string name="uuid_title">UUID:</string>
    <string name="major_id_title">Major-ID:</string>
    <string name="minor_id_title">Minor-ID:</string>
    <string name="rssi_title">RSSI:</string>
    <string name="distance_title">Distance:</string>

    <string name="uuid">UUID</string>
    <string name="major_id">Major-ID</string>
    <string name="minor_id">Minor-ID</string>
    <string name="rssi">RSSI</string>
    <string name="distance">Distance</string>

    <!-- machine_frag_item strings -->
    <string name="name_title">Name:</string>
    <string name="description_title">Description:</string>
    <string name="maintenance_title">Maintenance State:</string>
    <string name="production_title">Production State:</string>
    <string name="beacons_title">Beacons:</string>

    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="maintenance">Maintenance State</string>
    <string name="production">Production State</string>
    <string name="beacons">active / mapped</string>

    <string name="not_active">- beacon not active -</string>

    <!-- setup_frag strings -->
    <string name="clean_values">Use cleaned values:</string>
    <string name="simple_mode">Use simple mode:</string>
    <string name="sw_off">Off</string>
    <string name="sw_on">On</string>
    <string name="preferred_srv_location">Preferred server location:</string>
    <string name="local_srv">Local</string>
    <string name="remote_srv">Remote</string>
    <string name="update">Update</string>
    <string name="update_desc">Update Beacons &amp; Machines:</string>
    <string name="last_update">Last update:</string>

    <string name="discovering_server">Trying to discover local configuration server &#8230;</string>
    <string name="contacting_server">Contacting configuration server &#8230;</string>
    <string name="found_local_server">Found local server</string>
    <string name="no_server_found">No local and/or remote servers could be reached.</string>
    <string name="update_success">Update successful.</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string formatted="false" name="beacons_placeholder">%d / %d</string>

    <!-- meteoblue strings -->
    <string name="weather_gps_disabled">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="weather_gps_enable">Enable GPS</string>

    <string name="meteoblue_code01">Clear, cloudless sky</string>
    <string name="meteoblue_code02">Clear, few cirrus</string>
    <string name="meteoblue_code03">Clear with cirrus</string>
    <string name="meteoblue_code04">Clear with few low clouds</string>
    <string name="meteoblue_code05">Clear with few low clouds and few cirrus</string>
    <string name="meteoblue_code06">Clear with few low clouds and cirrus</string>
    <string name="meteoblue_code07">Partly cloudy</string>
    <string name="meteoblue_code08">Partly cloudy and few cirrus</string>
    <string name="meteoblue_code09">Partly cloudy and cirrus</string>
    <string name="meteoblue_code10">Mixed with some thunderstorm clouds possible</string>
    <string name="meteoblue_code11">Mixed with few cirrus with some thunderstorm clouds possible</string>
    <string name="meteoblue_code12">Mixed with cirrus and some thunderstorm clouds possible</string>
    <string name="meteoblue_code13">Clear but hazy</string>
    <string name="meteoblue_code14">Clear but hazy with few cirrus</string>
    <string name="meteoblue_code15">Clear but hazy with cirrus</string>
    <string name="meteoblue_code16">Fog/low stratus clouds</string>
    <string name="meteoblue_code17">Fog/low stratus clouds with few cirrus</string>
    <string name="meteoblue_code18">Fog/low stratus clouds with cirrus</string>
    <string name="meteoblue_code19">Mostly cloudy</string>
    <string name="meteoblue_code20">Mostly cloudy and few cirrus</string>
    <string name="meteoblue_code21">Mostly cloudy and cirrus</string>
    <string name="meteoblue_code22">Overcast</string>
    <string name="meteoblue_code23">Overcast with rain</string>
    <string name="meteoblue_code24">Overcast with snow</string>
    <string name="meteoblue_code25">Overcast with heavy rain</string>
    <string name="meteoblue_code26">Overcast with heavy snow</string>
    <string name="meteoblue_code27">Rain, thunderstorms likely</string>
    <string name="meteoblue_code28">Light rain, thunderstorms likely</string>
    <string name="meteoblue_code29">Storm with heavy snow</string>
    <string name="meteoblue_code30">Heavy rain, thunderstorms likely</string>
    <string name="meteoblue_code31">Mixed with showers</string>
    <string name="meteoblue_code32">Mixed with snow showers</string>
    <string name="meteoblue_code33">Overcast with light rain</string>
    <string name="meteoblue_code34">Overcast with light snow</string>
    <string name="meteoblue_code35">Overcast with mixture of snow and rain</string>

    <!-- Sony Smart Eyeglass -->
    <!-- Name of extension, shown in preferences -->
    <string name="extension_name">@string/app_name</string>
    <!-- Text used on control layout -->
    <string name="text_title_layout">Sample Text</string>
    <!-- Text in -->
    <string name="text_phone_to_smarteyeglass">Hello SmartEyeglass</string>
    <!-- Configuration title shown in preferences -->
    <string name="configuration_text">Hello World Activity</string>

</resources>
