<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_gravity="top"
    android:padding="10dp">
    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/blukii"
        tools:ignore="ContentDescription"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvUUID_TITLE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/uuid_title"
                android:textColor="@color/colorWhite"/>
            <TextView
                android:id="@+id/tvUUID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/uuid"
                android:textColor="@color/colorWhite"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvMAJOR_TITLE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/major_id_title"
                android:textColor="@color/colorWhite"/>
            <TextView
                android:id="@+id/tvMAJOR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/major_id"
                android:textColor="@color/colorWhite"/>
            <TextView
                android:id="@+id/tvMINOR_TITLE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/minor_id_title"
                android:textColor="@color/colorWhite"/>
            <TextView
                android:id="@+id/tvMINOR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/minor_id"
                android:textColor="@color/colorWhite"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvRSSI_TITLE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/rssi_title"
                android:textColor="@color/colorWhite"/>
            <TextView
                android:id="@+id/tvRSSI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/rssi"
                android:textColor="@color/colorWhite"/>
            <TextView
                android:id="@+id/tvDISTANCE_TITLE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/distance_title"
                android:textColor="@color/colorWhite"/>
            <TextView
                android:id="@+id/tvDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/distance"
                android:textColor="@color/colorWhite"/>
            </LinearLayout>
    </LinearLayout>
</LinearLayout>