<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:gravity="top"
    android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="true"
            android:padding="10dp">

            <Switch
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/clean_values"
                android:textOff="@string/sw_off"
                android:textOn="@string/sw_on"
                android:id="@+id/swUseCleanedValues" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="true"
            android:padding="10dp">

            <Switch
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/simple_mode"
                android:textOff="@string/sw_off"
                android:textOn="@string/sw_on"
                android:id="@+id/swUseSimpleMode" />
        </LinearLayout>
</LinearLayout>